Fixes gaps around current user

--- a/web/agree2disagree-ui/src/app/disagreers-panel/disagreers-panel.component.scss
+++ b/web/agree2disagree-ui/src/app/disagreers-panel/disagreers-panel.component.scss
@@ -9,6 +9,7 @@
     border-width: 2px;
     border-color: black;
     border-radius: 22px;
+    background-color: var(--user-color);
 }
 
 .email-wrapper {
